Update 404 page redirection

--- a/src/pages/404/index.astro
+++ b/src/pages/404/index.astro
@@ -6,7 +6,7 @@ if (Astro.url.pathname === "/") {
     return Astro.redirect("/dash/lists");
 }
 
-export const prerender = true;
+export const prerender = false;
 ---
 
 <VueLayout>
