Fix TOTP recovery, and dialog methods

--- a/src/pages/list/[list].astro
+++ b/src/pages/list/[list].astro
@@ -45,7 +45,7 @@ export const prerender = false;
     <WishList
         client:only="vue"
         listId={listId}
-        quickCreateURL={quickCreateURL}
+        quickCreateURLParam={quickCreateURL}
         listData={{ list, loadedAsAuthor, fulfillments, communityItems, avoidSpoilersDialogShown }}
     />
 </VueLayout>
